--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "developer": "nodemon build/index.js",
-    "compiler":"tsc -w"
+    "compiler": "tsc -w"
   },
   "keywords": [
     "back_pqrs",
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.1.30",
     "pg-promise": "^10.11.1",
     "sharp": "^0.29.2"
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/sharp": "^0.29.3",
     "nodemon": "^2.0.14"
   }
